--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <section class="content"> <!-- 3 main contents to the left -->
 <!-- Search Engine Optimization -->
-        <div id="search-engine-optimization" class="search-engine-optimization"> 
+        <div id="search-engine-optimization" class="search-engine-optimization content-row"> 
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="An Image of SEO written on a book on a table"/>
             <h2>Search Engine Optimization</h2>
             <p>
@@ -38,7 +38,7 @@
         </div> 
 
 <!-- Online Reputation Management -->
-        <div id="online-reputation-management" class="online-reputation-management"> 
+        <div id="online-reputation-management" class="online-reputation-management content-row"> 
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt=" Image of a laptop with the word reputation on the screen"/>
             <h2>Online Reputation Management</h2>
             <p>
@@ -47,7 +47,7 @@
         </div> 
 
 <!-- Social Media Marketing -->
-        <div id="social-media-marketing" class="social-media-marketing"> 
+        <div id="social-media-marketing" class="social-media-marketing content-row"> 
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="An image with several social media actions, inlcuding share, like and tweet"/>
             <h2>Social Media Marketing</h2>
             <p>
@@ -60,7 +60,7 @@
     <section class="benefits"> <!-- Vertical content on page -->
 
         <!-- Lead Generation-->
-            <div class="benefit-lead">  
+            <div class="benefit-lead benefit">  
                 <h3>Lead Generation</h3> 
                 <img src="./assets/images/lead-generation.png" alt="" />
                 <p>
